@@ -15,7 +15,7 @@ const struct HashEntry stringTableEntries[] = {
    { 0, 0, 0, 0, 0 },
    { "concat", StringProtoFuncImp::Concat, DontEnum|Function, 1, &stringTableEntries[26] },
    { 0, 0, 0, 0, 0 },
-   { "split", StringProtoFuncImp::Split, DontEnum|Function, 1, &stringTableEntries[28] },
+   { "split", StringProtoFuncImp::Split, DontEnum|Function, 2, &stringTableEntries[28] },
    { "anchor", StringProtoFuncImp::Anchor, DontEnum|Function, 1, 0 },
    { "charCodeAt", StringProtoFuncImp::CharCodeAt, DontEnum|Function, 1, 0 },
    { "toUpperCase", StringProtoFuncImp::ToUpperCase, DontEnum|Function, 0, 0 },
@@ -31,7 +31,7 @@ const struct HashEntry stringTableEntries[] = {
    { "charAt", StringProtoFuncImp::CharAt, DontEnum|Function, 1, 0 },
    { "fontsize", StringProtoFuncImp::Fontsize, DontEnum|Function, 1, 0 },
    { "substr", StringProtoFuncImp::Substr, DontEnum|Function, 2, 0 },
-   { "slice", StringProtoFuncImp::Slice, DontEnum|Function, 0, &stringTableEntries[30] },
+   { "slice", StringProtoFuncImp::Slice, DontEnum|Function, 2, &stringTableEntries[30] },
    { "substring", StringProtoFuncImp::Substring, DontEnum|Function, 2, 0 },
    { "toLowerCase", StringProtoFuncImp::ToLowerCase, DontEnum|Function, 0, 0 },
    { "big", StringProtoFuncImp::Big, DontEnum|Function, 0, &stringTableEntries[35] },
